--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -47,11 +47,13 @@
         <div role="list">
           <div role="listbox" ng-repeat="compra in listaCompras">
             <input type="checkbox" name="" id="" ng-click="selecionarCompra(compra.item)">
-            <span><button class="itemNome" type="button"
-                ng-click="abrirDetalhes(compra)">{{compra.item}}</button></span>
+            <span>{{compra.item}} </span>
             <span class="quantia">{{compra.quantia}}</span>
+            <button type="button" class="pencil" ng-click="abrirDetalhes(compra)">
+              <img src="./assets/icons/modify-icon.svg" alt="Caneta para edição">
+            </button>
             <button type="button" ng-click="excluirCompra(compra.item)">
-              <img src="./assets/icons/delete-02-stroke-rounded.svg" alt="lixeira">
+              <img src="./assets/icons/delete-02-stroke-rounded.svg" alt="lixeira para exclusão">
             </button>
           </div>
 
