Start of Login's Screen

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -12,7 +12,7 @@
     href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
     rel="stylesheet">
 
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/index.css">
   <link rel="shortcut icon" href="./assets/icons/Vector.svg" type="image/x-icon">
 
   <title>Lista de Compras</title>
@@ -26,7 +26,7 @@
 <body ng-controller="MeuController">
   <header>
     <a>
-      <img src="./assets/icons/logo.svg" alt="logo">
+      <img src="/assets/icons/logo.svg" alt="logo">
     </a>
   </header>
 
