--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -26,7 +26,7 @@
 <body ng-controller="MeuController">
   <header>
     <a>
-      <img src="/assets/icons/logo.svg" alt="logo">
+      <img src="./assets/icons/logo.svg" alt="logo">
     </a>
   </header>
 
