--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,91 +1,32 @@
 <!DOCTYPE html>
-<html lang="pt-BR" ng-app="meuApp">
+<html lang="pt">
 
 <head>
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
 
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link
-    href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
-    rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+        rel="stylesheet">
 
-  <link rel="stylesheet" href="./css/index.css">
-  <link rel="shortcut icon" href="./assets/icons/Vector.svg" type="image/x-icon">
+    <link rel="stylesheet" href="./css/index.css">
+    <link rel="shortcut icon" href="./assets/icons/Vector.svg" type="image/x-icon">
 
-  <title>Lista de Compras</title>
+    <title>Lista de Compras</title>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0/angular.min.js"></script>
-  <script src="./js/app.js"></script>
-  <script src="./js/controllers/MeuController.js"></script>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0/angular.min.js"></script>
+    <script src="./js/app.js"></script>
+    <meta charset="UTF-8">
+    <script>
+        window.location.href = "./view/lista.html";
+    </script>
 </head>
 
-<body ng-controller="MeuController">
-  <header>
-    <a>
-      <img src="./assets/icons/logo.svg" alt="logo">
-    </a>
-  </header>
-
-  <div id="app">
-    <div class="container">
-      <a href="#">&lt;- Voltar</a>
-    </div>
-    <main>
-      <form action="" method="post" enctype="multipart/form-data">
-        <h1>Compras da semana</h1>
-        <div class="input-wrapper">
-          <input type="text" placeholder="Adicione um novo item" id="item" ng-model="frmCompras.item">
-          <input class="number" type="number" placeholder="Quantidade" id="quantia" ng-model="frmCompras.quantia">
-          <button type="button" ng-click="adicionarCompra()">Adicionar item</button>
-
-        </div>
-
-        <div role="list">
-          <div role="listbox" ng-repeat="compra in listaCompras">
-            <input type="checkbox" name="" id="" ng-click="selecionarCompra(compra.item)">
-            <span>{{compra.item}} </span>
-            <span class="quantia">{{compra.quantia}}</span>
-            <button type="button" class="pencil" ng-click="abrirDetalhes(compra)">
-              <img src="./assets/icons/modify-icon.svg" alt="Caneta para edição">
-            </button>
-            <button type="button" ng-click="excluirCompra(compra.item)">
-              <img src="./assets/icons/delete-02-stroke-rounded.svg" alt="lixeira para exclusão">
-            </button>
-          </div>
-
-        </div>
-      </form>
-
-      <div class="warning" ng-show="exclusaoAviso">
-        <div class="text-container">
-          <img src="./assets/icons/warning-circle.svg" alt="">
-          <p>O item foi removido da lista</p>
-        </div>
-        <button type="button" ng-click="exclusaoAviso = false">
-          <img src="/assets/icons/cancel-02.svg" alt="">
-        </button>
-      </div>
-      <div class="warning" ng-show="ErroInclusao">
-        <div class="text-container">
-          <img src="./assets/icons/warning-circle.svg" alt="">
-          <p>{{ErroInclusao}}</p>
-        </div>
-        <button type="button" ng-click="exclusaoAviso = false">
-          <img src="/assets/icons/cancel-02.svg" alt="">
-        </button>
-      </div>
-    </main>
-  </div>
-
-
-  <!-- HTML dos Modais -->
-  <div ng-include="'./view/excluir.html'"></div>
-  <div ng-include="'./view/detalhes.html'"></div>
-
+<body>
+    <h1>Redirecionando...</h1>
 </body>
 
 </html>
