--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -21,7 +21,7 @@
     <script src="./js/app.js"></script>
     <meta charset="UTF-8">
     <script>
-        window.location.href = "./view/lista.html";
+        window.location.href = "./view/login.html";
     </script>
 </head>
 
